--- a/com.crm.vtiger/pom.xml
+++ b/com.crm.vtiger/pom.xml
@@ -65,7 +65,7 @@
           <version>3.0.0-M5</version>
           <configuration>
             <suiteXmlFiles>
-            <suiteXmlFile>demobatchtestng.xml</suiteXmlFile>
+            <suiteXmlFile>batchnewtestng.xml</suiteXmlFile>
             </suiteXmlFiles>
           </configuration>
         </plugin>
